RESOLVED FIXED205155
REGRESSION(r252979): Avoid unnecessary work when searching for the flow when constructing line layout iterator
https://bugs.webkit.org/show_bug.cgi?id=205155
Summary REGRESSION(r252979): Avoid unnecessary work when searching for the flow when ...
Antti Koivisto
Reported 2019-12-12 00:31:22 PST
It may be slow.
Attachments
patch (4.75 KB, patch)
2019-12-12 00:39 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2019-12-12 00:32:08 PST
Antti Koivisto
Comment 2 2019-12-12 00:39:10 PST
WebKit Commit Bot
Comment 3 2019-12-12 07:18:13 PST
Comment on attachment 385484 [details] patch Clearing flags on attachment: 385484 Committed r253427: <https://trac.webkit.org/changeset/253427>
WebKit Commit Bot
Comment 4 2019-12-12 07:18:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.