REGRESSION(r252979): Avoid unnecessary work when searching for the flow when constructing line layout iteratorAvoid unnecessary work when searching for the flow when constructing line layout iterator https://bugs.webkit.org/show_bug.cgi?id=205155 <rdar://problem/57846936>

Reviewed by Zalan Bujtas.

We unecessarily searched the ancestor chain flow the RenderFlow. We can avoid this
for now since we know only candidate it the direct parent.

* rendering/line/LineLayoutTraversal.cpp:
(WebCore::LineLayoutTraversal::lineLayoutSystemFlowForRenderer):
(WebCore::LineLayoutTraversal::firstTextBoxFor):
(WebCore::LineLayoutTraversal::firstTextBoxInTextOrderFor):
(WebCore::LineLayoutTraversal::elementBoxFor):
(WebCore::LineLayoutTraversal::flowForText): Deleted.


Canonical link: https://commits.webkit.org/218355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253427 268f45cc-cd09-0410-ab3c-d52691b4dbfc